Changelog for mysql-visual-explain:

   * FULLTEXT indexes were not recognized (type=fulltext in EXPLAIN).

2007-08-23: version 1.0.1

   * MySQL socket connection option didn't work.
   * Added --askpass option.
   * UNIONs inside a SUBQUERY weren't correctly nested.
   * Some types of impossible queries weren't handled.

2007-07-28: version 1.0.0

   * Initial release.